<resources>
    <string name="app_name">Demo_Github</string>
    <string name="s">S.</string>
    <string name="first_step">First of the few steps to set you up with Bank Account</string>
    <string name="pan_number">Pan Number</string>
    <string name="birth_date">Birthdate</string>

    <string name="learn_more">Providing PAN &amp; Date of Birth helps us find and fetch your KYC from a central registryby the
        Government of India. <font fgcolor='#6041B0'>Learn more</font></string>
    <string name="next">Next</string>
    <string name="i_don_t_have_a_pan">I don\'t have a PAN</string>
    <string name="insert_msg">Details submitted successfully</string>
    <string name="dd">dd</string>
    <string name="mm">MM</string>
    <string name="yyyy">yyyy</string>
    <string name="search_repository">Search Repository</string>

    <string name="something_went_wrong">Something went wrong!</string>
    <string name="invalid_request">Invalid request</string>

    <string name="offline">Offline</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="created_date">Created Date</string>
    <string name="last_update_on">Last Update On</string>
    <string name="open_issues">Open Issues</string>

</resources>