<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_background"
            app:navigationIcon="@drawable/ic_back" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPicture"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />


            <TextView
                android:id="@+id/tvStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_star"
                app:layout_constraintEnd_toStartOf="@+id/tvFork"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPicture"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvFork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_fork"
                app:layout_constraintEnd_toStartOf="@+id/tvWatch"
                app:layout_constraintStart_toEndOf="@+id/tvStar"
                app:layout_constraintTop_toTopOf="@+id/tvStar"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvWatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center"
                app:drawableStartCompat="@drawable/ic_watchers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvFork"
                app:layout_constraintTop_toTopOf="@+id/tvStar"
                app:layout_constraintVertical_chainStyle="packed" />


            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStar"
                tools:text="test" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.40" />

            <TextView
                android:id="@+id/tvLanguageLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:text="@string/language"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLink" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="start"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvLink"
                tools:text="@string/language" />

            <TextView
                android:id="@+id/tvDescriptionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:text="@string/description"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="4dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:gravity="start"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguage"
                tools:text="@string/language" />

            <TextView
                android:id="@+id/tvCreatedDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:text="@string/created_date"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <TextView
                android:id="@+id/tvCreatedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="start"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                tools:text="@string/language" />

            <TextView
                android:id="@+id/tvLastUpdateOnLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:text="@string/last_update_on"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCreatedDate" />

            <TextView
                android:id="@+id/tvLastUpdateOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:gravity="start"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvCreatedDate"
                tools:text="@string/language" />


            <TextView
                android:id="@+id/tvOpenIssuesLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:text="@string/open_issues"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastUpdateOn" />

            <TextView
                android:id="@+id/tvOpenIssues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:layout_marginEnd="24dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="start"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvLastUpdateOn"
                tools:text="@string/language" />


            <TextView
                android:id="@+id/tvLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:autoLink="web"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="@string/language" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>